add update and delete salon
